[package]
name = "patsh"
version = "0.2.1"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "A command-line tool for patching shell scripts"
readme = "README.md"
homepage = "https://github.com/nix-community/patsh"
repository = "https://github.com/nix-community/patsh"
license = "MPL-2.0"
keywords = ["bash", "cli", "nix", "patch", "shell"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
is_executable = "1.0.1"
shell-escape = "0.1.5"
tree-sitter = "0.20.10"
tree-sitter-bash = "0.20.1"

[dependencies.clap]
version = "4.4.17"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dev-dependencies]
assert_cmd = "2.0.13"
expect-test = "1.4.1"
tempfile = "3.10.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
